@@ -1,5 +1,6 @@
 Changes for 1.3:
 
+ - fixed situations when latest_alarm() may return wrong value (Alexei)
  - developed multitemplate system (Eugene)
  - developed group permission system (Eugene)
  - added processing of distributed events (Alexei)
